2003-11-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: handle update_after edit properly, so that
	name changes will put entry in the correct category
	* src/PeopleView.py: cleanup
	* src/PeopleStore.py: delete stale iter from dictionary when no
	longer used.

2003-11-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* FAQ: Several minor corrections. New question about bug reports.
	* Makefile.am, Makefile.in: Add FAQ to EXTRA_DIST.
	* src/Marriage.py (__init__): Call AutoComp.AutoCombo() prior to 
	setting text in place and temple combos. Set place text to empty 
	string if LdsSeal is empty. Markup lds_label as bold if LdsSeal is 
	not empty. 

2003-11-25  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Utils.py (search_for): check for directory

2003-11-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* FAQ: Add a question about adding custom columns.

2003-11-25  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelImage.py: replace system call with Utils.search_for
	* src/Utils.py: added search_for to look for an executable in the current
	path

2003-11-24  Don Allingham  <dallingham@users.sourceforge.net>
	* FAQ: removed question 18 (how fast is GRAMPS)
	* src/PeopleStore.py: set sort data for top level nodes. Allows the first
	and last nodes to be sorted properly.

2003-11-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* FAQ: Added to CVS.

2003-11-23  Don Allingham  <dona@localhost.localdomain>
	* src/gramps_main.py: just update information after an edit
	instead of deleting/re-enter. Caused pygtk to segfault
	* src/PeopleView.py: provide update person function
	* src/dialog.glade: remove unused callbacks
	
2003-11-23  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ChooseParents.py (ChooseParents.__init__): Revert the dialog 
	back to being non-modal (otherwise adding new people is impossible).
	* src/FamilyView.py: Do not pass the window to the ChooseParents class.